environments/test/helm/ingress_tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poe-tls
  namespace: poe
  annotations:
    cert-manager.io/cluster-issuer: poe-cluster-issuer
spec:
  ingressClassName: external-nginx

  tls:
  - hosts:
    - poe.134.112.14.81.nip.io 
    secretName: poe-tls

  rules:
  - host: poe.134.112.14.81.nip.io 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
